# choppy-python-server

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
choppy_back/: server.py
output/02fe08a7-c874-4f85-bf8b-0d1eb782200f/: config.yaml
output/02fe08a7-c874-4f85-bf8b-0d1eb782200f/bunny_20230103_010305/: bunny_part_0.stl  bunny_part_1.stl  config.yml  final_tree_with_connectors.json
output/23d0633c-6c7a-47a8-b7d3-bcde1ed81b24/: config.yaml
output/23d0633c-6c7a-47a8-b7d3-bcde1ed81b24/bunny_20230103_005554/: bunny_1.json  bunny_part_0.stl  bunny_part_1.stl  config.yml  final_tree_with_connectors.json
output/4a0acfab-42fc-4119-b3b1-65d5144a7a87/: config.yaml
output/4a0acfab-42fc-4119-b3b1-65d5144a7a87/bunny_20230103_004445/: bunny_part_0.stl  bunny_part_1.stl  config.yml  final_tree_with_connectors.json
output/4a43075a-4fba-4ca9-9f36-05123a82fd1c/: config.yaml
output/4a43075a-4fba-4ca9-9f36-05123a82fd1c/bunny_20230103_005944/: bunny_part_0.stl  bunny_part_1.stl  (+2 more)
output/4e7a88b6-4ec0-4617-8a4d-a1793b33a7f3/: config.yaml
output/79a8d34f-bd34-4232-958a-c4eed1c8b3d1/: config.yaml
output/80a6be60-abbd-4c6b-8111-c7ebe35dc13a/: config.yaml
output/a56865d8-bab2-4aa3-b48d-8e1d04f36835/: config.yaml
output/cd78f978-beb2-437a-a455-d117bfdc4e17/: config.yaml
output/e695a30c-ea84-4565-bc20-5fabae4e177e/: config.yaml
output/e761bfe0-4239-4630-8b0d-76e442ad0b36/: config.yaml
output/f3b3fc7f-0c6d-4a5d-a87b-a6e68800b3fd/: config.yaml
pychop_server/: server.py  settings.py
tests/: debug_uploader.py  test_poll.py
tests/test_data/: Body5.stl
(+28 files in other folders)
