[tool.poetry]
name = "choppy-back"
version = "0.1.0"
description = ""
authors = ["Greg Starr <gregstarr2@gmail.com>"]
readme = "README.md"
packages = [{include = "choppy_back"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
attrs = "^22.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
